--- a/src/Wenwen/FrontendBundle/Resources/views/Survey/index.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Survey/index.html.twig
@@ -118,7 +118,24 @@
 			</ul>
 
             {{ include( 'WenwenFrontendBundle:Survey:_sopSurveyList.html.twig', {'sop_params': sop_params, 'preview': preview} ) }}
-            {{ include( 'WenwenFrontendBundle:Survey:_voteList.html.twig', {'votes': votes} ) }}
+            <ul id="surveyList">
+                {% for vote in votes %}
+                    {{ include( 'WenwenFrontendBundle:Survey:_surveyRow.html.twig',
+                    {
+                        'type_class': 'quick',
+                        'type_desc': '每日参与快速问答，保持帐户活跃，以获得更多高积分问卷的机会',
+                        'type_label': '快速问答',
+                        'end_date': vote.endTime | date('Y-m-d'),
+                        'num': "v%s"|format(vote.id),
+                        'survey_type': 'quick_survey',
+                        'title': vote.title[:10],
+                        'answered': false,
+                        'url': path('jili_frontend_vote_show',{'id':vote.id}),
+                        'answer_status_label': '投票',
+                        'point': vote.pointValue,
+                    } ) }}
+                {% endfor %}
+            </ul>
 		</div>
 	</div>
 	<div class="main-con-right right">
