--- a/web/sass/404.scss
+++ b/web/sass/404.scss
@@ -4,6 +4,7 @@
 @import "layout/header";
 @import "layout/footer";
 .main{
+	margin-top: 0;
 	background: #f2f3f5;
 	.main-error-con{
 		margin: 0 auto;
