--- a/web/sass/questionnaire.scss
+++ b/web/sass/questionnaire.scss
@@ -126,17 +126,19 @@ body{
 		}
 		.qnEnd{
 			.qnEndTxt{
-				margin: 150px 0 0 150px;
+				padding: 150px 0 0 120px;
 				.txt{
+					width: 585px;
 					font-size: 14px;
-					line-height: 20px;
+					line-height: 24px;
 					margin-left: 31px;
-					margin-top: 18px;
+					padding: 25px 0 25px 130px;
+					background: url(../img/questionnaire/normalface.png) no-repeat left center;
 					h2{
 						font-size: 20px;
 						font-weight: bold;
 						line-height: 30px;
-						padding-bottom: 5px;
+						padding-bottom: 12px;
 					}
 				}
 			}
