--- a/src/Wenwen/FrontendBundle/Resources/views/Survey/_surveyRow.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Survey/_surveyRow.html.twig
@@ -27,7 +27,7 @@
     正在维护中
     {% else %}
         {% if type_class == 'quick' %}
-        <a href="{{ url }}" return false;" >投票</a>
+        <a href="{{ url }}" >投票</a>
         {% else %}
         <a href="{{ url }}" target="_brank" onClick="pop_survey_window(this);return false;" >可回答</a>
         {% endif %}
