update pic status

--- a/src/Wenwen/FrontendBundle/Resources/views/FulcrumProjectSurvey/endlink.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/FulcrumProjectSurvey/endlink.html.twig
@@ -12,11 +12,11 @@
 {% block body %}
 <div class="qnWrap">
     <div class="qnCon qnEnd">
-        <div class="qnEndTxt clearfix">
-            <span class="txt left"><h2>亲爱的用户！</h2>
+        <div class="qnEndTxt">
+            <div class="txt"><h2>亲爱的用户！</h2>
               感谢您参加本次的问卷调查。<br>
-              积分会在调查结束后的<span>第2天</span>自动累计。
-            </span>
+              积分会在调查结束后的第2天自动累计。
+            </div>
         </div>
     </div>
     {% include 'WenwenFrontendBundle:Questionnaire:_footer.html.twig' %}
