--- a/src/Wenwen/FrontendBundle/Resources/views/ProjectSurveyCint/agreementComplete.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/ProjectSurveyCint/agreementComplete.html.twig
@@ -12,11 +12,11 @@
 {% block body %}
 <div class="qnWrap">
     <div class="qnCon qnEnd">
-        <div class="qnEndTxt clearfix">
-            <span class="txt left"><h2>亲爱的用户！</h2>
-                感谢您的参与，您已经成功获得了<span class="darkYellow"> 1 </span>积分。<br>
+        <div class="qnEndTxt">
+            <div class="txt"><h2>亲爱的用户！</h2>
+                感谢您的参与，您已经成功获得了<b>1积分</b>。<br>
                 您可以关闭浏览器窗口，稍后您可以在‘任务历史’ 确认积分的累积。
-            </span>
+            </div>
         </div>
     </div>
     {% include 'WenwenFrontendBundle:Questionnaire:_footer.html.twig' %}
