--- a/src/Wenwen/FrontendBundle/Resources/views/Questionnaire/complete.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Questionnaire/complete.html.twig
@@ -12,8 +12,8 @@
 {% block body %}
 <div class="qnWrap">
 	<div class="qnCon qnEnd">
-		<div class="qnEndTxt clearfix">
-			<span class="txt left"><h2>亲爱的用户！</h2>感谢您参加本次的问卷调查。积分会在调查结束后的3周内自动累计。</span>
+		<div class="qnEndTxt">
+			<div class="txt"><h2>亲爱的用户！</h2>感谢您参加本次的问卷调查。积分会在调查结束后的3周内自动累计。</div>
 		</div>
 		<div class="qnEndRecommend">
 			<div class="tit">为您推荐其他的问卷</div>
