--- a/src/Wenwen/FrontendBundle/Resources/views/ProjectSurvey/complete.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/ProjectSurvey/complete.html.twig
@@ -12,20 +12,19 @@
 {% block body %}
 <div class="qnWrap">
 	<div class="qnCon qnEnd">
-		<div class="qnEndTxt clearfix">
-            <span class="txt left"><h2>亲爱的用户！您好！</h2>
-                {% if answer_status == 'complete' %}
-                感谢您参加本次的问卷调查，积分会在调查结束后的3周内自动累计。
-                {% elseif answer_status == 'screenout' %}
-                感谢您参加本次的问卷调查，非常抱歉，您不符合本次调查的要求。
-                {% elseif answer_status == 'quotafull' %}
-                感谢您参加本次的问卷调查，非常抱歉，您慢了一步，本次问卷调查名额已满。
-                {% else %}
+		<div class="qnEndTxt">
+            {% if answer_status == 'complete' %}
+            <div class="txt"><h2>亲爱的用户！您好！</h2>感谢您参加本次的问卷调查，积分会在调查结束后的3周内自动累计。</div>
+            {% elseif answer_status == 'screenout' %}
+            <div class="txt sad"><h2>亲爱的用户！您好！</h2>感谢您参加本次的问卷调查，非常抱歉，您不符合本次调查的要求。</div>
+            {% elseif answer_status == 'quotafull' %}
+            <div class="txt sad"><h2>亲爱的用户！您好！</h2>感谢您参加本次的问卷调查，非常抱歉，您慢了一步，本次问卷调查名额已满。</div>
+            {% else %}
+            <div class="txt"><h2>亲爱的用户！您好！</h2>
                 编号为 r{{survey_id}} 的问卷出现了一些小问题，此时无法确认您的回答是否有效。<br>
                 请联系我们的客服，告知问卷编号（r{{survey_id}}）和您的账号，我们的客服会尽最快的速度答复您。<br>
-                给您添麻烦了，请继续关注91问问，谢谢！
-                {% endif %}
-            </span>
+                给您添麻烦了，请继续关注91问问，谢谢！</div>
+            {% endif %}
 		</div>
 	</div>
 	{% include 'WenwenFrontendBundle:Questionnaire:_footer.html.twig' %}
