--- a/web/sass/questionnaire.scss
+++ b/web/sass/questionnaire.scss
@@ -140,15 +140,21 @@ body{
 						line-height: 30px;
 						padding-bottom: 12px;
 					}
+					&.sad{
+						background: url(../img/questionnaire/sadface.png) no-repeat left center;
+					}
+					b{
+						color: #ff6700;
+					}
 				}
 			}
 		}
 		.qnRecoEnd{
 			.qnEndTxt{
-				margin: 80px 0 0 170px;
+				padding: 80px 0 0 170px;
 			}
 			.qnEndRecommend{
-				margin-top: 170px;
+				margin-top: 110px;
 				.tit{
 					    height: 70px;
   						line-height: 40px;
