delete not used js files

--- a/src/Wenwen/FrontendBundle/Resources/views/Help/newGuide.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Help/newGuide.html.twig
@@ -47,7 +47,7 @@
                 <dl>
                     <dt>体验广告</dt>
                     <dd>各种体验，不同玩法，积分收入囊中！</dd>
-                    <dd><a href="{{ path('_default_support_newGuide_detail') }}#advertisement" class="more">快去了解</a></dd>
+                    <dd><a href="{{ path('_default_support_newGuide_detail') }}#advertiserment" class="more">快去了解</a></dd>
                 </dl>
             </li>
         </ul>
