--- a/src/Wenwen/FrontendBundle/Resources/views/Help/newGuideDetail.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Help/newGuideDetail.html.twig
@@ -53,7 +53,7 @@
                     <dd><img src="{{ asset('img/help/guide3-4.jpg') }}" width="800" height="354"/></dd>
                </dl>
           </div>
-          <div class="newGuideDetail" id="advertisement">
+          <div class="newGuideDetail" id="advertiserment">
 			<h3>体验广告</h3>
 			<a class="back" href="{{ path('_default_support_newGuide') }}">返回新手上路»</a>
                <dl>
