--- a/src/Wenwen/FrontendBundle/Resources/views/User/regSuccess.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/User/regSuccess.html.twig
@@ -2,11 +2,11 @@
 {% block title %}激活完成：{{ parent() }}  {% endblock %}
 
 {% block stylesheet %}
-<link href="{{ asset('css/register.css') }} " rel="stylesheet" type="text/css">
+<link href="{{ asset('css/regSuccess.css') }} " rel="stylesheet" type="text/css">
 {% endblock %}
 
 {% block header %}
-{% include 'WenwenFrontendBundle:Components:_headerSimple.html.twig' %} 
+{% include 'WenwenFrontendBundle:Components:_header.html.twig' %} 
 {% endblock %}
 
 {% block body %}
@@ -32,7 +32,7 @@
 {% endblock %}
 
 {% block footer %}
-{% include 'WenwenFrontendBundle:Components:_footerCopyright.html.twig' %} 
+{% include 'WenwenFrontendBundle:Components:_footer.html.twig' %} 
 {% endblock %}
 
 {% block javascript %}
