update password validate and regEmailActive css

--- a/src/Wenwen/FrontendBundle/Resources/views/User/emailActive.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/User/emailActive.html.twig
@@ -32,8 +32,8 @@
 			</dl>
 			<dl>
 				<dt>还未收到确认邮件，您可以：</dt>
-				<dd>1.查看您的垃圾邮件箱，并将support@91wenwen.com加为您的联系人。</dd>
-				<dd>2.如果还是没有收到，请点击这里联系客服人员。</dd>
+				<dd>1.查看您的垃圾邮件箱，并将<b>support@91wenwen.com</b>加为您的联系人。</dd>
+				<dd>2.如果还是没有收到，请<a href="mailto:support@91wenwen.com">点击这里</a>联系客服人员。</dd>
 			</dl>
 		</div>
 	</div>
