--- a/src/Wenwen/FrontendBundle/Resources/views/User/emailActive.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/User/emailActive.html.twig
@@ -17,7 +17,7 @@
 				<div class="title">就差一步了，快去激活您的账户吧！</div>
 				{% if gotoEmail %}
 					<p>我们已经向您的邮箱{{ email }}发送了一封激活邮件，请点击邮件中的链接完成注册。</p>
-		            <a href="http://{{ gotoEmail }}" target="_blank">立即进入邮箱</a>
+		            <!-- <a href="http://{{ gotoEmail }}" target="_blank">立即进入邮箱</a> -->
 		        {% endif %}
 		        <input type='hidden' id='uid' value='xxx'/>
 		        <input type='hidden' id='code' value='xxx'/>
