--- a/web/css/shopDetail.css
+++ b/web/css/shopDetail.css
@@ -288,9 +288,9 @@ body {
     height: 12px;
     vertical-align: -2px;
     display: inline-block;
-    background: url(/img/common/icons_common.png) no-repeat 0 -69px; }
+    background: url(../img/common/icons_common.png) no-repeat 0 -69px; }
     .crumbs .home:hover {
-      background: url(/img/common/icons_common.png) no-repeat 0 -85px; }
+      background: url(../img/common/icons_common.png) no-repeat 0 -85px; }
   .crumbs em {
     font-family: simsun; }
   .crumbs, .crumbs a {
