--- a/web/sass/component/crumbs.scss
+++ b/web/sass/component/crumbs.scss
@@ -8,9 +8,9 @@
 		height: 12px;
 		vertical-align: -2px;
 		display: inline-block;
-		background: url(/img/common/icons_common.png) no-repeat 0 -69px;
+		background: url(../img/common/icons_common.png) no-repeat 0 -69px;
 		&:hover{
-			background: url(/img/common/icons_common.png) no-repeat 0 -85px; 
+			background: url(../img/common/icons_common.png) no-repeat 0 -85px; 
 		}
 	}
 	em{
