close flow exchange

--- a/src/Wenwen/FrontendBundle/Resources/views/About/map.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/About/map.html.twig
@@ -39,7 +39,7 @@
 					<li class="font16"><strong>体验广告</strong></li><li><a href="{{ path('_advertiserment_list') }}" title="体验广告">体验广告</a></li><li><a href="{{ path('jili_frontend_cpsadvertisement_list') }}" title="返利商家">返利商家</a></li>
 				</ul>
 				<ul class="clearfix">
-					<li class="font16"><strong>兑换中心</strong></li><li><a href="{{ path('_exchange_index') }}" title="兑换中心">兑换中心</a></li><li><a href="{{ path('_exchange_index') }}" title="手机费兑换">手机费兑换</a></li><li><a href="{{ path('_exchange_index') }}" title="支付宝兑换">支付宝兑换</a></li><li><a href="{{ path('_exchange_index') }}" title="手机流量兑换">手机流量兑换</a></li>
+					<li class="font16"><strong>兑换中心</strong></li><li><a href="{{ path('_exchange_index') }}" title="兑换中心">兑换中心</a></li><li><a href="{{ path('_exchange_index') }}" title="手机费兑换">手机费兑换</a></li><li><a href="{{ path('_exchange_index') }}" title="支付宝兑换">支付宝兑换</a></li><!-- <li><a href="{{ path('_exchange_index') }}" title="手机流量兑换">手机流量兑换</a></li> -->
 				</ul>
 			</div>
 			<div class="box">
