--- a/src/Wenwen/FrontendBundle/Resources/views/Exchange/index.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Exchange/index.html.twig
@@ -65,10 +65,10 @@
 	                        <dt>上网流量包兑换</dt>
 	                        <dd class="text">用积分兑换上网流量包，电信、联通<strong>1590米粒</strong>起兑，移动<strong>1660米粒</strong>起兑</dd>
 	                        <dd class="exchangeBtn">
-	                            <a href="javascript:void(0)" id="flowBtn">立即兑换</a>
+	                            <a href="javascript:void(0)" id="flowBtn" class="disabled">暂时关闭</a>
 	                        </dd>
 	                    </dl>
-	                    <span class="newIcon"></span>
+	                    <!-- <span class="newIcon"></span> -->
 	                </div>
 	            </li>
 	        </ul>
