--- a/src/Wenwen/FrontendBundle/Resources/views/Survey/index.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Survey/index.html.twig
@@ -13,8 +13,7 @@
 <div class="main-con w1000 clearfix">
 	<div class="main-con-left left">
 		<div class="survey survey-sub">
-			<em></em>
-			<h1>问卷列表</h1>
+			<h1><em></em>问卷列表</h1>
             <ul id="surveyList">
             {% if  votes|length < 1  %}
                 <li>现在还没有新的问卷调查。</li>
