--- a/src/Wenwen/FrontendBundle/Resources/views/Vote/_topVoteList.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Vote/_topVoteList.html.twig
@@ -19,12 +19,12 @@
 		</div>
 		{% else %}
 			{% if (item.endTime|date("Ymd") < "now"|date('Ymd')) %}
-                <a href="{{ path('jili_frontend_vote_result',{'id':item.id}) }}" class="survey-btn">去看看</a>
+                <a href="{{ path('jili_frontend_vote_result',{'id':item.id}) }}" class="vote-btn">去看看</a>
             {% else %}
                 {% if app.session.has('uid') and item.userAnswerCount > 0 %}
-                <a href="{{ path('jili_frontend_vote_result',{'id':item.id}) }}" class="survey-btn">去看看</a>
+                <a href="{{ path('jili_frontend_vote_result',{'id':item.id}) }}" class="vote-btn">去看看</a>
                 {% else %}
-                <a href="{{ path('jili_frontend_vote_show',{'id':item.id}) }}" class="survey-btn">去投票</a>
+                <a href="{{ path('jili_frontend_vote_show',{'id':item.id}) }}" class="vote-btn">去投票</a>
                 {% endif %}
             {% endif %}
         {% endif %}
