--- a/web/css/home.css
+++ b/web/css/home.css
@@ -36,8 +36,8 @@ body {
 .main-con-right {
   width: 23%; }
   .main-con-right h2 {
-    padding: 0 15px;
-    line-height: 35px;
+    padding: 13px 15px 0;
+    line-height: 50px;
     color: #000;
     font-size: 14px;
     font-weight: bold;
@@ -323,17 +323,28 @@ body {
 .main-con-left h1 {
   height: 55px;
   line-height: 55px;
-  font-size: 20px;
-  padding-left: 20px;
-  border-bottom: 1px solid #f6f6f6;
-  font-weight: bold; }
+  font-size: 24px;
+  color: #666;
+  padding: 10px 0 0 6px;
+  border-bottom: 1px solid #f6f6f6; }
+.main-con-left em {
+  width: 24px;
+  height: 26px;
+  margin-right: 11px;
+  background: url(../img/common/titIco.png) no-repeat 0 -1px;
+  vertical-align: middle;
+  display: inline-block;
+  *display: inline;
+  *zoom: 1; }
 .main-con-left .title {
-  color: #0078b6;
+  color: #575757;
   font-size: 15px;
-  font-weight: bold;
+  font-weight: 600;
   line-height: 35px; }
   .main-con-left .title a {
-    color: #0078b6; }
+    color: #575757; }
+    .main-con-left .title a:hover {
+      color: #914b11; }
 .main-con-left ul {
   width: 100%; }
 .main-con-left li {
@@ -342,8 +353,8 @@ body {
   position: relative;
   z-index: 1; }
   .main-con-left li:hover .survey-item, .main-con-left li.active .survey-item {
-    width: 80%; }
-  .main-con-left li:hover .survey-btn, .main-con-left li.active .survey-btn {
+    width: 86%; }
+  .main-con-left li:hover .vote-btn, .main-con-left li.active .vote-btn {
     width: 15%; }
   .main-con-left li:hover .vote-txt, .main-con-left li.active .vote-txt {
     width: 68%; }
@@ -354,28 +365,21 @@ body {
     *zoom: 1; }
 
 .survey-item {
-  width: 100%;
-  padding: 0 0 15px 0;
-  transition: width 300ms;
-  -moz-transition: width 300ms;
-  -webkit-transition: width 300ms;
-  -o-transition: width 300ms; }
-  .survey-item ul {
-    margin-left: -10px;
-    width: 100%; }
+  width: 86%;
+  padding: 0 0 15px 0; }
   .survey-item li {
     float: left;
-    width: 27%;
+    width: 22%;
     text-align: left;
     padding: 5px 0 0 10px;
     border-top: none;
     border-left: 1px solid #f6f6f6; }
     .survey-item li span {
       line-height: 22px;
-      color: #646d7a; }
+      color: #9c9c9c; }
     .survey-item li p {
       line-height: 28px;
-      color: #646d7a; }
+      color: #9c9c9c; }
       .survey-item li p strong {
         color: #ff6700;
         font-size: 16px; }
@@ -384,13 +388,45 @@ body {
     .survey-item li.last {
       width: 10%; }
 
-.survey-btn {
+.survey .survey-btn {
+  color: #666;
+  background: transparent;
+  width: 24%;
+  line-height: 170px;
+  cursor: default;
+  position: absolute;
+  right: -13px;
+  top: 0px; }
+  .survey .survey-btn a {
+    color: #fff;
+    background: #ff7733;
+    width: 141px;
+    height: 33px;
+    line-height: 33px;
+    text-align: center;
+    color: #fff;
+    background: #ff6700;
+    border: 1px solid #ff6700;
+    border-radius: 3px;
+    cursor: pointer;
+    transition: all 0.4s;
+    -moz-transition: all 0.4s;
+    -webkit-transition: all 0.4s;
+    -o-transition: all 0.4s;
+    display: inline-block;
+    *display: inline;
+    *zoom: 1; }
+    .survey .survey-btn a:hover {
+      background: #f25807;
+      border: 1px solid #f25807; }
+
+.vote .vote-btn {
   width: 0%;
-  height: 100%;
-  line-height: 1000%;
+  height: 65%;
+  line-height: 700%;
   position: absolute;
   z-index: 1000;
-  top: 0;
+  top: 27px;
   right: 0;
   text-align: center;
   color: #fff;
@@ -407,12 +443,12 @@ body {
   -moz-transition: all 0.4s;
   -webkit-transition: all 0.4s;
   -o-transition: all 0.4s; }
-  .survey-btn:hover, .survey-btn:active {
+  .vote .vote-btn:hover, .vote .vote-btn:active {
     background: #f25807; }
 
-.vote a.survey-btn {
+.vote a.vote-btn {
   color: #fff;
-  line-height: 900%; }
+  line-height: 700%; }
 .vote li {
   padding: 30px 20px; }
   .vote li.vote-new .vote-img {
@@ -463,7 +499,7 @@ body {
 
 .vote-txt {
   width: 84%;
-  color: #646d7a;
+  color: #9c9c9c;
   line-height: 22px;
   transition: width 300ms;
   -moz-transition: width 300ms;
@@ -476,7 +512,7 @@ body {
     text-overflow: ellipsis;
     white-space: nowrap; }
   .vote-txt .relate {
-    color: #646d7a; }
+    color: #9c9c9c; }
     .vote-txt .relate span {
       padding: 0 3px; }
       .vote-txt .relate span strong {
@@ -534,20 +570,19 @@ body {
         background: url(../img/home/sliderbtnhover.png) no-repeat; }
 
 .main-con-left h1 {
-  color: #000;
-  font-size: 18px;
-  font-weight: bold;
+  color: #333;
+  font-size: 22px;
+  font-weight: normal;
   height: 55px;
-  line-height: 55px; }
-  .main-con-left h1 em {
-    width: 12px;
-    height: 12px;
-    margin-right: 15px;
-    background: url(../img/common/title_ico.png) no-repeat;
-    vertical-align: middle;
-    display: inline-block;
-    *display: inline;
-    *zoom: 1; }
+  line-height: 55px;
+  position: relative;
+  border-bottom: 1px dotted #e2e2e2;
+  padding-bottom: 10px; }
+  .main-con-left h1 .more {
+    position: absolute;
+    right: 0;
+    font-size: 12px;
+    color: #666; }
 .main-con-left .vote li.vote-new .tips {
   top: 42px; }
   .main-con-left .vote li.vote-new .tips span {
@@ -563,7 +598,7 @@ body {
   right: 20px; }
 
 .main-con-right .notice ul {
-  padding: 15px; }
+  padding: 0 15px 15px; }
 .main-con-right .notice li {
   line-height: 28px;
   overflow: hidden;
@@ -651,6 +686,45 @@ body {
 
 #mask, #newguideWrap, #newguideWrap .newguide1, #newguideWrap .newguide2, #newguideWrap .newguide3 {
   display: none; }
+
+.mainAdTop {
+  width: 100%;
+  height: 265px;
+  background: #fff; }
+
+.mainAdTop ul {
+  width: 1000px;
+  margin: 0 auto; }
+
+.mainAdTop ul h2 {
+  font-size: 22px;
+  color: #333;
+  padding: 30px 0 20px; }
+
+.mainAdTop ul li {
+  width: 165px;
+  float: left;
+  margin-right: 42px; }
+
+.mainAdTop ul li:last-child {
+  margin-right: 0; }
+
+.mainAdTop ul li a {
+  color: #999; }
+
+.mAdTit {
+  display: block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  line-height: 28px; }
+
+.mPointNum {
+  color: #ff6700;
+  font-weight: bold;
+  font-size: 18px;
+  vertical-align: -1px;
+  margin-right: 3px; }
 
 .footer {
   margin-top: 50px;
