--- a/web/sass/home.scss
+++ b/web/sass/home.scss
@@ -46,18 +46,20 @@ $slider-height: 305px;
 }
 .main-con-left{
 	h1{
-		color: $h-font-color;
-		font-size: $h-font-size;
-		font-weight: bold;
+		color: #333;
+		font-size: 22px;
+		font-weight: normal;
 		height: 55px;
 		line-height: 55px;
-		em{
-			width: 12px;
-			height: 12px;
-			margin-right: 15px;
-			background: url(../img/common/title_ico.png) no-repeat;
-			vertical-align: middle;
-			@include dib();
+		position: relative;
+		border-bottom: 1px dotted #e2e2e2;
+		padding-bottom: 10px;
+		
+		.more{
+			position: absolute;
+			right: 0;
+			font-size: 12px;
+			color: #666; 
 		}
 	}
 	.vote li.vote-new .tips{
@@ -80,7 +82,7 @@ $slider-height: 305px;
 .main-con-right{
 	.notice{
 		ul{
-			padding: 15px;
+			padding: 0 15px 15px;
 		}
 		li{
 			line-height: 28px;
@@ -179,5 +181,44 @@ $slider-height: 305px;
 }
 #mask, #newguideWrap, #newguideWrap .newguide1, #newguideWrap .newguide2, #newguideWrap .newguide3{
 	display: none;
+}
+.mainAdTop{
+	width: 100%;
+    height: 265px;
+    background: #fff;
+}
+.mainAdTop ul{
+	width: 1000px;
+	margin: 0 auto;
+}
+.mainAdTop ul h2{
+	font-size: 22px;
+	color: #333;
+	padding: 30px 0 20px;
+}
+.mainAdTop ul li{
+	width: 165px;
+	float: left;
+	margin-right: 42px;
+}
+.mainAdTop ul li:last-child{
+	margin-right: 0;
+}
+.mainAdTop ul li a{
+	color: #999;
+}
+.mAdTit{
+	display: block;
+	overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    line-height: 28px;
+}
+.mPointNum{
+	color: $main-color;
+	font-weight: bold;
+	font-size: 18px;
+	vertical-align: -1px;
+	margin-right: 3px;
 }
 @import "layout/footer";
