add hall content on home page

--- a/src/Jili/BackendBundle/Resources/views/ExperienceAdvertisement/addExperienceAdvertisement.html.twig
+++ b/src/Jili/BackendBundle/Resources/views/ExperienceAdvertisement/addExperienceAdvertisement.html.twig
@@ -14,7 +14,7 @@
     <tr><td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr><td>{{form_label(form.missionTitle)}}:</td><td>{{ form_widget(form.missionTitle) }}</td></tr>
 <tr><td>{{form_label(form.missionHall)}}:</td><td>{{ form_widget(form.missionHall) }}</td></tr>
-<tr><td>{{form_label(form.missionImgUrl)}}:<br />（任务大厅一：94x78 / 任务大厅二：116x78</td><td>{{form_widget(form.missionImgUrl)}}</td></tr>
+<tr><td>{{form_label(form.missionImgUrl)}}:<br />（尺寸大小：165x112 ）</td><td>{{form_widget(form.missionImgUrl)}}</td></tr>
 <tr><td>{{form_label(form.point)}}:</td><td>{{form_widget(form.point)}}</td></tr>
 <tr><td>&nbsp;</td><td><input type="submit" value="提 交"/></td></tr>
 {{form_rest(form)}}
