add "more" link

--- a/src/Wenwen/FrontendBundle/Resources/views/Home/home.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Home/home.html.twig
@@ -38,11 +38,10 @@
 {{ render(controller('JiliFrontendBundle:Home:adExperience' ) ) }}
 <div class="main-con w1000 clearfix">
 	<div class="main-con-left left">
-		{# 1. 这一块的问卷列表判断登录前不显示，登录以后才显示 #}
-		{# 2. 首页问卷默认显示两条 #}
-		{# 3. 如果这里的问卷没有内容，整个div都隐藏 #}
+		{# 1. 首页问卷默认显示两条 #}
+		{# 2. 如果这里的问卷没有内容，整个div都隐藏 #}
 		<div class="survey">
-			<h1><em></em>问卷列表<a class="more" href="#">更多>></a></h1>
+			<h1><em></em>问卷列表<a class="more" href="{{ path('_survey_index') }}">更多>></a></h1>
 			<ul id="surveyList">
 				<li>
 					<div class="survey-item">
@@ -96,7 +95,7 @@
 		</div>
 		{# 这里的快速问答显示目前91问问快速问答页面的那5条 #}
 		<div class="vote">
-			<h1><em></em>快速问答<a href="#" class="more">更多>></a></h1>
+			<h1><em></em>快速问答<a href="{{ path('jili_frontend_vote_index') }}" class="more">更多>></a></h1>
 			{{ render(controller('JiliFrontendBundle:Vote:top' ) ) }}
 		</div>
 	</div>
