add survey list on home page

--- a/src/Wenwen/FrontendBundle/Resources/views/Home/home.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Home/home.html.twig
@@ -42,6 +42,7 @@
 		{# 2. 如果这里的问卷没有内容，整个div都隐藏 #}
 		<div class="survey">
 			<h1><em></em>问卷列表<a class="more" href="{{ path('_survey_index') }}">更多>></a></h1>
+			{# {{ include( 'WenwenFrontendBundle:Survey:_sopSurveyListHome.html.twig', {'sop_params': sop_params, 'preview': preview} ) }} #}
 			<ul id="surveyList">
 				<li>
 					<div class="survey-item">
