--- a/web/sass/index.scss
+++ b/web/sass/index.scss
@@ -379,4 +379,83 @@ $main-ad-color: #eb7020;
 	text-align: center;
 	color: #ff0000;
 }
+/* weibo login prompt Start*/
+.weiboLogPop{
+	width: 406px;
+	height: 270px;
+	background: rgba(202,202,202,.4);
+	position: absolute;
+    z-index: 1;
+    top: 480px;
+    right: 450px;
+}
+.wbWrap{
+	height: 248px;
+	margin: 10px;
+	border: 1px solid #bdbdbd;
+	background: #fff;
+	position: absolute;
+	z-index: 2;
+	.wbTit{
+		height: 40px;
+		line-height: 40px;
+		background: #ebebeb;
+		padding-left: 20px;
+		position: relative;
+		color: #444;
+		.wbIco{
+			width: 23px;
+			height: 18px;
+			background: url(../img/home/sinaUnact.png) no-repeat;
+			display: inline-block;
+			margin-right: 7px;
+			vertical-align: -4px;
+		}
+		.closeBtn{
+			width: 30px;
+			height: 30px;
+			background: url(../img/home/closeBtn.png) no-repeat 6px 8px;
+			display: inline-block;
+			position: absolute;
+			top: 4px;
+			right: 10px;
+		}
+	}
+	.wbText{
+		padding: 22px 27px 25px;
+		.l1{
+			font-size: 15px;
+			line-height: 22px;
+			color: #666;
+			strong{
+				color: #4ab6db;
+			}
+		}
+		.l2{
+			color: #999;
+			line-height: 19px;
+			margin-top: 7px;
+		}
+	}
+	.wbBtnArea{
+		text-align: center;
+		.cancelBtn,.continueBtn{
+			padding: 5px 30px;
+			@include border-radius(3px);
+		}
+		.cancelBtn{
+			background: #e4e4e4;
+			border: 1px solid #dbdbdb;
+			color: #000;
+			margin-right: 20px;
+			cursor: pointer;
+		}
+		.continueBtn{
+			background: #50c5ee;
+			border: 1px solid #49b3d9;
+			color: #fff;
+		}
+	}
+}
+/* weibo login prompt End*/
 @import "layout/footer";
