--- a/web/css/component/login.css
+++ b/web/css/component/login.css
@@ -156,6 +156,7 @@
       color: #a3a3a3;
       font-size: 14px;
       background: #fff url(../img/home/sinaUnact.png) no-repeat 32px 12px;
+      cursor: pointer;
       display: inline-block;
       *display: inline;
       *zoom: 1;
