--- a/web/css/index.css
+++ b/web/css/index.css
@@ -794,37 +794,46 @@ body {
   color: #ff0000; }
 
 /* weibo login prompt Start*/
-.weiboLogPop {
+.quickLogPop {
   width: 406px;
-  height: 270px;
+  height: 253px;
   background: rgba(202, 202, 202, 0.4);
   position: absolute;
   z-index: 1;
   top: 480px;
-  right: 450px; }
+  right: 450px;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px; }
 
-.wbWrap {
-  height: 248px;
+.quickLWrap {
+  height: 230px;
   margin: 10px;
   border: 1px solid #bdbdbd;
   background: #fff;
   position: absolute;
   z-index: 2; }
-  .wbWrap .wbTit {
+  .quickLWrap .wbTit {
     height: 40px;
     line-height: 40px;
     background: #ebebeb;
     padding-left: 20px;
     position: relative;
     color: #444; }
-    .wbWrap .wbTit .wbIco {
+    .quickLWrap .wbTit .wbIco, .quickLWrap .wbTit .qqIco {
       width: 23px;
       height: 18px;
-      background: url(../img/home/sinaUnact.png) no-repeat;
       display: inline-block;
       margin-right: 7px;
       vertical-align: -4px; }
-    .wbWrap .wbTit .closeBtn {
+    .quickLWrap .wbTit .wbIco {
+      background: url(../img/home/sinaUnact.png) no-repeat; }
+    .quickLWrap .wbTit .qqIco {
+      width: 19px;
+      background: url(../img/home/qqUnact.png) no-repeat; }
+    .quickLWrap .wbTit .closeBtn {
       width: 30px;
       height: 30px;
       background: url(../img/home/closeBtn.png) no-repeat 6px 8px;
@@ -832,34 +841,34 @@ body {
       position: absolute;
       top: 4px;
       right: 10px; }
-  .wbWrap .wbText {
-    padding: 22px 27px 25px; }
-    .wbWrap .wbText .l1 {
+  .quickLWrap .wbText {
+    padding: 22px 27px 28px; }
+    .quickLWrap .wbText .l1 {
       font-size: 15px;
       line-height: 22px;
       color: #666; }
-      .wbWrap .wbText .l1 strong {
+      .quickLWrap .wbText .l1 strong {
         color: #4ab6db; }
-    .wbWrap .wbText .l2 {
+    .quickLWrap .wbText .l2 {
       color: #999;
       line-height: 19px;
       margin-top: 7px; }
-  .wbWrap .wbBtnArea {
+  .quickLWrap .wbBtnArea {
     text-align: center; }
-    .wbWrap .wbBtnArea .cancelBtn, .wbWrap .wbBtnArea .continueBtn {
+    .quickLWrap .wbBtnArea .cancelBtn, .quickLWrap .wbBtnArea .continueBtn {
       padding: 5px 30px;
       border-radius: 3px;
       -webkit-border-radius: 3px;
       -moz-border-radius: 3px;
       -ms-border-radius: 3px;
       -o-border-radius: 3px; }
-    .wbWrap .wbBtnArea .cancelBtn {
+    .quickLWrap .wbBtnArea .cancelBtn {
       background: #e4e4e4;
       border: 1px solid #dbdbdb;
       color: #000;
       margin-right: 20px;
       cursor: pointer; }
-    .wbWrap .wbBtnArea .continueBtn {
+    .quickLWrap .wbBtnArea .continueBtn {
       background: #50c5ee;
       border: 1px solid #49b3d9;
       color: #fff; }
