--- a/src/Wenwen/FrontendBundle/Resources/views/Components/maintenance.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Components/maintenance.html.twig
@@ -14,7 +14,7 @@
 	<div class="mtText">
 		<em></em>
 		<h2>很抱歉，快捷登录功能正在维护中</h2>
-		<p>提示：微博登录暂时只支持对老用户开放，如果您是第一次在我站使用微博快捷登录，您将无法正常登录哟！如果您没有账号，请到当前页面进行正常的注册流程。我们的开发人员正在抓紧对此功能进行修复，感谢您的配合！</p>
+		<p>提示：快捷登录暂时只支持对老用户开放，如果您是第一次在我站使用快捷登录，您将无法正常登录哟！如果您没有账号，请到当前页面进行正常的注册流程。我们的开发人员正在抓紧对此功能进行修复，感谢您的配合！</p>
 	</div>
 </div>	
 {% endblock %}
