--- a/web/css/advertisement.css
+++ b/web/css/advertisement.css
@@ -36,8 +36,8 @@ body {
 .main-con-right {
   width: 23%; }
   .main-con-right h2 {
-    padding: 0 15px;
-    line-height: 35px;
+    padding: 13px 15px 0;
+    line-height: 50px;
     color: #000;
     font-size: 14px;
     font-weight: bold;
@@ -517,13 +517,13 @@ body {
       *display: inline;
       *zoom: 1; }
       .main-con-advertisement .tabBtns a.first {
-        border-left: none; }
+        border-left: 1px solid #ebedf2; }
       .main-con-advertisement .tabBtns a:hover, .main-con-advertisement .tabBtns a.active {
-        margin-top: -3px;
+        margin-top: -1px;
         margin-right: -1px;
         height: 38px;
         border: 1px solid #d7d9e3;
-        border-bottom: none;
+        border-bottom: 1px solid #fff;
         border-radius: 3px;
         color: #131313;
         background: #fff; }
