--- a/web/sass/advertisement.scss
+++ b/web/sass/advertisement.scss
@@ -203,14 +203,14 @@
 			border-left: 1px solid #d7d9e3;
 			@include dib();
 			&.first{
-				border-left: none;
+				border-left: 1px solid #ebedf2;
 			}
 			&:hover, &.active{
-				margin-top: -3px;
+				margin-top: -1px;
 				margin-right: -1px;
 				height: 38px;
 				border: 1px solid #d7d9e3;
-				border-bottom: none;
+				border-bottom: 1px solid #fff;
 				border-radius: 3px;
 				color: #131313;
 				background: #fff;
