--- a/web/sass/register.scss
+++ b/web/sass/register.scss
@@ -85,6 +85,7 @@
 		border: 1px solid #ddd;
 		border-radius: 3px;
 		display: block;
+		cursor: pointer;
 		img{
 			vertical-align: middle;
 			margin-right: 9px;
