fix backend error's display css

--- a/src/Wenwen/FrontendBundle/Resources/views/User/resetPwd.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/User/resetPwd.html.twig
@@ -34,7 +34,7 @@
 						<div class="prompt"><span id="pwdRepeat_succeed"></span><span id="pwdRepeat_error"></span></div>
 					</li>
 				</ul>
-                <p class=backError><br>{% if code is defined %} {{ code }} {% endif %}</p>
+                <p class="backError">{% if code is defined %} {{ code }} {% endif %}</p>
 				<span class="btn" id="savePwd" tabindex="0">下一步</span>
 			</div>
 			</form>
