--- a/src/Wenwen/FrontendBundle/Resources/views/Home/index.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Home/index.html.twig
@@ -53,7 +53,7 @@
 			<div class="wbTit"><span class="wbIco"></span>微博登录提示<span class="closeBtn"></span></div>
 			<div class="wbText">
 				<p class="l1">微博登录现在仅<strong>对老用户开放</strong>，如果您是第一次在我站使用微博快捷登录，您将无法正常登录哟！</p>
-				<p class="l2">如果您没有账号，请到当前页面进行正常的注册流程。我们的开发人员正在抓紧对此功能进行修复，感谢您的配合！</p>
+				<p class="l2">如果您没有账号，请到注册页面进行正常的注册流程。我们的开发人员正在抓紧对此功能进行修复，感谢您的配合！</p>
 			</div>
 			<div class="wbBtnArea"><a class="cancelBtn">取消</a><a href="{{ path('weibo_api_login') }}" class="continueBtn">继续</a></div>
 		</div>
@@ -65,7 +65,7 @@
 			<div class="wbTit"><span class="qqIco"></span>QQ登录提示<span class="closeBtn"></span></div>
 			<div class="wbText">
 				<p class="l1">QQ登录现在仅<strong>对老用户开放</strong>，如果您是第一次在我站使用QQ快捷登录，您将无法正常登录哟！</p>
-				<p class="l2">如果您没有账号，请到当前页面进行正常的注册流程。我们的开发人员正在抓紧对此功能进行修复，感谢您的配合！</p>
+				<p class="l2">如果您没有账号，请到注册页面进行正常的注册流程。我们的开发人员正在抓紧对此功能进行修复，感谢您的配合！</p>
 			</div>
 			<div class="wbBtnArea"><a class="cancelBtn">取消</a><a href="{{ path('qq_api_login') }}" class="continueBtn">继续</a></div>
 		</div>
