--- a/src/Wenwen/FrontendBundle/Resources/views/Home/index.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Home/index.html.twig
@@ -34,7 +34,7 @@
 					{% if code %}
             		<input type="hidden" id="error_code" class="error" value="{{ code }}">
        				{% endif %}
-					<div class="login-btn" id="submit_button" tabindex="0">登录</div>
+					<input type="submit" class="login-btn" id="submit_button" tabindex="0" value="登录"/>
 					</form>
 					<p><a href="{{ path('_user_resetPwd') }}" class="spec right">忘记密码？</a>还没账号，<a href="{{ path('_user_reg') }}">马上注册</a></p>
 					<div class="login-btn-others">
