--- a/web/css/component/login.css
+++ b/web/css/component/login.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .login-wrapper {
   position: absolute;
   z-index: 1000;
@@ -29,13 +30,6 @@
     margin-bottom: 20px;
     position: relative;
     z-index: 1; }
-<<<<<<< HEAD
-    .login li.remember {
-      font-size: 14px;
-      height: 24px;
-      line-height: 24px; }
-=======
->>>>>>> 35ada21ecdd5adc6db8235057d9f230237f57d11
     .login li img {
       vertical-align: middle; }
     .login li span {
@@ -75,8 +69,8 @@
         color: #c80000;
         background: #fff;
         font-size: 12px;
-        height: 32px;
-        line-height: 32px;
+        height: 35px;
+        line-height: 35px;
         padding: 0 10px;
         border: 1px solid #c80000;
         border-radius: 3px;
@@ -96,13 +90,8 @@
       vertical-align: middle; }
     .login li input[type="text"], .login li input[type="password"] {
       width: 252px;
-<<<<<<< HEAD
-      height: 32px;
-      line-height: 30px;
-=======
       height: 36px;
       line-height: 34px;
->>>>>>> 35ada21ecdd5adc6db8235057d9f230237f57d11
       padding: 0 5px;
       color: #555;
       font-size: 14px;
@@ -124,20 +113,18 @@
     .login li input[type="checkbox"] {
       vertical-align: middle; }
   .login .login-btn {
-<<<<<<< HEAD
-    margin-top: 20px;
-=======
     margin-top: 25px;
->>>>>>> 35ada21ecdd5adc6db8235057d9f230237f57d11
     width: 100%;
     height: 40px;
     line-height: 40px;
     color: #fff;
-    font-size: 21px;
+    font-size: 20px;
+    font-family: "微软雅黑";
     background: #1566d6;
     border: 1px solid #1566d6;
     border-radius: 5px;
     text-align: center;
+    display: block;
     cursor: pointer;
     transition: all 0.4s;
     -moz-transition: all 0.4s;
@@ -155,11 +142,7 @@
       .login p a.spec {
         color: #757982; }
   .login .login-btn-others {
-<<<<<<< HEAD
-    margin-top: 20px; }
-=======
     margin-top: 40px; }
->>>>>>> 35ada21ecdd5adc6db8235057d9f230237f57d11
     .login .login-btn-others span {
       margin-left: -10px; }
     .login .login-btn-others a {
@@ -172,10 +155,7 @@
       color: #a3a3a3;
       font-size: 14px;
       background: #fff url(../img/home/sinaUnact.png) no-repeat 32px 12px;
-<<<<<<< HEAD
       cursor: pointer;
-=======
->>>>>>> 35ada21ecdd5adc6db8235057d9f230237f57d11
       display: inline-block;
       *display: inline;
       *zoom: 1;
