--- a/web/css/index.css
+++ b/web/css/index.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .w1000 {
   width: 1000px;
   margin: 0 auto; }
@@ -351,8 +352,8 @@ body {
         color: #c80000;
         background: #fff;
         font-size: 12px;
-        height: 32px;
-        line-height: 32px;
+        height: 35px;
+        line-height: 35px;
         padding: 0 10px;
         border: 1px solid #c80000;
         border-radius: 3px;
@@ -400,11 +401,13 @@ body {
     height: 40px;
     line-height: 40px;
     color: #fff;
-    font-size: 21px;
+    font-size: 20px;
+    font-family: "微软雅黑";
     background: #1566d6;
     border: 1px solid #1566d6;
     border-radius: 5px;
     text-align: center;
+    display: block;
     cursor: pointer;
     transition: all 0.4s;
     -moz-transition: all 0.4s;
