--- a/web/sass/component/login.scss
+++ b/web/sass/component/login.scss
@@ -76,8 +76,8 @@
 				color: #c80000;
 				background: #fff;
 				font-size: 12px;
-				height: 32px;
-				line-height: 32px;
+				height: 35px;
+				line-height: 35px;
 				padding: 0 10px;
 				border: 1px solid #c80000;
 				border-radius: 3px;
@@ -127,11 +127,13 @@
 		height: 40px;
 		line-height: 40px;
 		color: #fff;
-		font-size: 21px;
+		font-size: 20px;
+		font-family: "微软雅黑";
 		background: #1566d6;
 		border: 1px solid #1566d6;
 		border-radius: 5px;
 		text-align: center;
+		display: block;
 		cursor: pointer;
 		&:hover{
 			background:#145dc4;
