--- a/src/Wenwen/FrontendBundle/Resources/views/Survey/_sopSurveyList.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Survey/_sopSurveyList.html.twig
@@ -1,6 +1,6 @@
-<input type="hidden" id="sop_api_url" value="{{ sop_api_url }}">
-<input type="hidden" id="sop_point" value="{{ sop_point}}">
-<input type="hidden" id="preview" value="{{ preview }}">
+<input type="hidden" id="sop_api_url" value="{{ sop_api_url }}" />
+<input type="hidden" id="sop_point" value="{{ sop_point}}" />
+<input type="hidden" id="preview" value="{{ preview }}" />
 
 <input type="hidden" id="sop_app_id"   value="{{ sop_params.app_id }}" />
 <input type="hidden" id="sop_app_mid"  value="{{ sop_params.app_mid }}" />
